--- a/web_static/styles/quizzes.css
+++ b/web_static/styles/quizzes.css
@@ -8,15 +8,21 @@
 }
 
 .quiz_info {
+    /*
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    */
+    position: fixed;
+    overflow-y: auto;
+    left: 0;
     width: 30%;
-    height: fit-content;
-    padding-top: 0px;
+    height: 77.5%;
+    /*
     margin-bottom: -30px;
-    padding-right: 15px;
-    padding-left: 20px;
+    */
+    margin-top: 70px;
+    padding: 20px;
+    padding-top: 0px;
     border-right: 1px white solid;
     background-color: white;
     text-align: left;
@@ -30,7 +36,6 @@
 .quiz_info h2 {
     margin-bottom: 20px;
     font-size: 30px;
-    margin-top: 78px;
 }
 
 .quiz_info p {
@@ -120,12 +125,12 @@ div.level span {
 
 .questions {
     width: 80%;
-    margin-left: 30px;
+    margin-left: 37%;
     margin-top: 50px;
 }
 
 .questions h2 {
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .questions ul {
